<resources>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://api.tinode.co/.well-known/assetlinks.json\" }]</string>
    <string name="tinode_url" translatable="false">https://github.com/tinode/</string>
    <string name="default_host_name" translatable="false">10.0.2.2:6060</string>

    <string name="app_name" translatable="false">연락혀</string>
    <string name="app_name_full" translatable="false">연락혀</string>
    <string name="app_version">버젼</string>
    <string name="copyright" translatable="false">© 2018 tindroid-연락혀</string>
    <string name="tinode" translatable="false">TEAM9</string>

    <string name="login_hint">아이디</string>
    <string name="password_hint">비밀번호</string>
    <string name="new_message_hint">메세지를 입력하세요</string>
    <string name="send_message_button_hint">메세지 보내기</string>
    <string name="send_image_button_hint">사진 보내기</string>
    <string name="send_file_button_hint">파일 보내기</string>

    <string name="sign_in">로그인</string>
    <string name="app_description" translatable="false">오픈프로젝트_연락혀</string>
    <string name="action_signup">로그인</string>
    <string name="sign_up">로그인</string>
    <string name="login_new">아이디</string>
    <string name="password_new">비밀번호</string>
    <string name="password_repeat">비밀번호를 한번 더 입력하세요</string>
    <string name="full_name">김영자</string>
    <string name="tinode_logo" translatable="false">연락혀 로고</string>
    <string name="upload_avatar">프로필 사진을 등록하세요</string>
    <string name="continue_fb">페이스북으로 계속하기</string>
    <string name="continue_goog">구글로 계속하기</string>
    <string name="or">OR</string>
    <string name="action_cancel">취소</string>
    <string name="transport_default">기본값</string>
    <string name="transport_websocket" translatable="false">websocket</string>
    <string name="transport_long_polling" translatable="false">long polling</string>
    <string name="settings_host_name">Host name</string>
    <string name="settings_use_tls">Use TLS</string>
    <string name="settings_wire_transport">Wire transport</string>
    <string name="settings_host_name_summary">Change server address</string>
    <string name="settings_use_tls_summary">Use secure connection</string>
    <string name="settings_wire_transport_summary">Select wire transport</string>

    <!-- access mode definitions -->
    <string name="modeReadable">can join</string>
    <string name="modeWritable">can publish</string>
    <string name="modeReadOnly">read-only</string>
    <string name="modeMuted">muted</string>
    <string name="modeAdmin">admin</string>
    <string name="modeCanDelete">can delete</string>
    <string name="modeOwner">owner</string>
    <string name="modeBlocked">blocked</string>
    <!-- mode-like access statuses -->
    <string name="modeInvited">invited</string>
    <string name="modeRequested">requested</string>
    <string name="modeUndefined">undefined</string>
    <string name="modePending">pending</string>

    <!-- Menu actions -->
    <string name="action_settings">세팅</string>
    <string name="action_delete">삭제</string>
    <string name="action_mute">음소거</string>
    <string name="action_edit_contact">연락처 수정</string>
    <string name="action_clear_messages">메세지 삭제</string>
    <string name="action_view_contact">친구 목록 보기</string>
    <string name="action_attach">붙임</string>
    <string name="action_new_chat">새로운 대화</string>
    <string name="action_new_group">새로운 단체 대화</string>
    <string name="action_start_by_id">Start by ID</string>
    <string name="action_about">About</string>
    <string name="action_search">검색</string>
    <string name="action_add_contact">친구 추가</string>
    <string name="action_edit_topic">Edit topic</string>
    <string name="action_send_now">지금 보내기</string>
    <string name="action_view_details">상세정보 보기</string>
    <string name="action_copy">복사</string>
    <string name="action_offline">오프라인상태로 진행하기</string>
    <string name="action_delete_group">대화 삭제…</string>

    <string name="avatar">프로필 사진</string>
    <string name="select_image">사진 선택</string>
    <string name="select_file">Select file</string>
    <string name="image_is_missing">Image is missing</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="error_login_failed">Login failed: </string>
    <string name="error_connection_failed">Connection failed: </string>
    <string name="login_required">Login required</string>
    <string name="password_required">Password required</string>
    <string name="error_new_account_failed">Account registration failed:</string>
    <string name="no_contacts">등록된 친구가 없습니다.</string>
    <string name="invite">초대</string>
    <string name="contacts">친구 목록</string>
    <string name="chats">대화 목록</string>

    <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
     alphabet using ListView fast scroll. -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="search_hint">Find contacts</string>
    <string name="contacts_permission_denied">Contacts not loaded: permission denied</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="pick_account">Pick Account</string>
    <string name="tinode_invite_subject">Check out Tindroid Messenger</string>
    <string name="tinode_invite_body">Check out Tindroid Messenger. Download it from https://github.com/tinode/</string>

    <string name="profile_action">연락혀 프로필</string>
    <string name="view_profile">프로필 보기</string>
    <string name="tinode_message">메세지 보내기</string>
    <string name="failed_to_invite">Don\'t know how to invite - no contact info</string>
    <string name="about_title">About</string>
    <string name="failed_to_send_message">Failed to send message</string>
    <string name="failed_to_delete_messages">Failed to delete messages</string>
    <string name="topic_title">그룹 이름</string>
    <string name="group_members">그룹 멤버</string>
    <string name="name_required">Topic name required</string>
    <string name="no_members">No group members</string>
    <string name="letter_tile_font_family" translatable="false">sans-serif-medium</string>
    <string name="add_one_member">Add at least one group member</string>
    <string name="failed_to_create_topic">Failed to create topic</string>
    <string name="add_members">대화 상대 추가</string>
    <string name="leave_group">채팅방 나가기</string>
    <string name="address">Address</string>
    <string name="topic_muted">Muted</string>
    <string name="permissions">Permissions</string>
    <string name="close">닫기</string>

    <string name="invitation_text">Join my group!</string>
    <string name="no_connection">You are offline</string>
    <string name="action_failed">Action failed</string>

    <string name="placeholder_contact_title">Unnamed or unknown</string>
    <string name="placeholder_topic_title">Unnamed</string>
    <string name="placeholder_private">Private info: not set</string>

    <string name="options_menu">Options menu</string>
    <string name="current_user">You</string>
    <string name="default_permissions">Default permissions</string>
    <string name="auth_permissions">Authenticated users</string>
    <string name="anon_permissions">Anonymous users</string>
    <string name="topic_private">Additional info (private)</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="edit_permissions">Edit Permissions</string>

    <string name="permission_owner">Full control (owner)</string>
    <string name="permission_join">Join</string>
    <string name="permission_read">Read</string>
    <string name="permission_write">Write</string>
    <string name="permission_approve">Approve new members</string>
    <string name="permission_share">Invite new members</string>
    <string name="permission_notifications">Receive notifications</string>
    <string name="permission_delete">Delete messages</string>

    <string name="send_message">Send message</string>
    <string name="change_permissions">Change permissions</string>
    <string name="make_owner">Make owner</string>
    <string name="remove_from_group">Remove</string>
    <string name="block">Block</string>

    <string name="confirm_member_removal">Remove %1$s from \"%2$s\"?</string>
    <string name="confirm_member_ban">Remove and ban %1$s from \"%2$s\"?</string>
    <string name="confirm_delete_topic">Do you really want to delete this conversation for everyone?</string>
    <string name="modeWriteOnly">write-only</string>
    <string name="owner_cannot_unsubscribe">Owner cannot unsubscribe</string>
    <string name="read_receipts_enabled">Send read receipts</string>
    <string name="typing_notifications_enabled">Show typing notifications</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="account_settings">Account settings</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="failed_empty_password">Not changed: empty password</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="edit_account">Edit account name</string>
    <string name="invalid_login">Login is invalid</string>
    <string name="join">Join</string>
    <string name="ignore">Ignore</string>

    <string name="default_attachment_name" translatable="false">tinode_file_attachment</string>
    <string name="download_attachment">save</string>
    <string name="broken_image">Unknown or invalid image format</string>
    <string name="file_manager_not_found">File manager not found</string>
    <string name="attachment_too_large">The file size %1$s exceeds the %2$s limit.</string>
    <string name="failed_to_attach">Failed to send file</string>

    <string name="email">Email</string>
    <string name="tel">Phone</string>
    <string name="email_required">Email required</string>
    <string name="tel_required">Phone number required</string>
    <string name="validate_cred">Enter confirmation code sent to you by %1$s:</string>
    <string name="confirm">Confirm</string>
    <string name="validation_example">Numbers only</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="failed_credential_confirmation">Incorrect confirmation code</string>
    <string name="addByIdHint">Enter topic or user ID</string>
    <string name="failed_empty_id">ID is required</string>
    <string name="topic_not_found_or_invalid">Topic not found or invalid</string>
    <string name="sending_disabled">Not available</string>
    <string name="failed_to_download">Failed to save downloaded file</string>
    <string name="failed_to_open_file">No application can view the file of this type</string>
    <string name="download_title">Tindroid download</string>
    <string name="some_permissions_missing">Some permissions missing.</string>
    <string name="invalid_file">Unable to attach this file</string>
    <string name="cancelled">cancelled</string>
    <string name="yourPermissions">Yours</string>
    <string name="login_rejected">Login rejected</string>
    <string name="email_rejected">Email rejected</string>
    <string name="invalid_confirmation_code">Invalid code</string>
    <string name="notification_channel_name">New mesage</string>
    <string name="notification_channel_description">New message was received</string>
    <string name="request_pass_reset">Request password reset by %1$s:</string>
    <string name="validated_address_to_use">Validated %1$s to use</string>
    <string name="request">Request</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_valid_address">Enter valid %1$s</string>
    <string name="invalid_or_unknown_credential">Invalid or unknown address</string>
    <string name="password_reset_message_sent">Message with instructions sent</string>
</resources>
