<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.tinode.tindroid.LoginFragment">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/tinode_logo"
        android:src="@mipmap/ic_launcher"
        app:srcCompat="@drawable/연락혀small" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/app_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editLoginWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appTitle"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editLogin"
            android:inputType="text"
            android:hint="@string/login_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLoginWrapper"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editPassword"
            android:hint="@string/password_hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPasswordWrapper"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"
        android:textColor="@color/연락혀대표"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/forgotPassword"
        style="?android:buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="@color/연락혀대표"
        android:textSize="30sp" />

</RelativeLayout>
